# maticas

./: .env  .gitignore  Cargo.toml  Procfile  README.md  app.json
migrations/2020-08-11-185439_db_init/: down.sql  up.sql
src/: config.rs  graphql.rs  graphql_schema.rs  handlers.rs  main.rs  models.rs  schema.rs  sql_queries.rs
